Another round of Glenda's Changes

--- a/mainsite/static/twa/css/_content.scss
+++ b/mainsite/static/twa/css/_content.scss
@@ -627,8 +627,16 @@
 .areaRightSide {
   padding-left:         15px;
 }
-.issuebar, .issueItem {
-  cursor:               pointer;
+.issuebar {
+    cursor:             pointer;
+    background-color:   $col-notsolightgrey;
+  &:hover {
+    background-color:   $col-boxshadow;
+  }
+}
+.issueItem {
+  cursor:             pointer;
+
   &:hover {
     background-color:   $col-notsolightgrey;
   }
