--- a/spe_blog/templates/spe_blog/plugins/picture_with_text_below.html
+++ b/spe_blog/templates/spe_blog/plugins/picture_with_text_below.html
@@ -16,10 +16,8 @@
                     {% endif %}
                     <div class="story-text">
                         <span class="pub-date">{{ article.date|date:"d F Y" }}
-{#                        {% if current_page.parent|tostring == "OGF" %}#}
-{##}
-{#                        {% endif %}#}
-                        {% if current_page.parent|tostring == "OGF" and article.is_readable == True %}{# check if the article is locked or not and indicate #}
+
+                        {% if pubcode == "OGF" and article.is_readable == True %}{# check if the article is locked or not and indicate #}
                             | <span class="sideListLock" data-toggle="tooltip" data-placement="bottom" title="Article is free to view">&nbsp;<i class="fa fa-unlock"></i></span>
                         {% endif %}
                         </span>
