--- a/mainsite/templates/twa_base.html
+++ b/mainsite/templates/twa_base.html
@@ -115,26 +115,34 @@
                 <div class="footerURight col-md-9">
         <div class="col-md-2 col-md-offset-1">
             <h3>MAIN</h3>
-            <p><a href="/ogf/topics/">Topics</a></p>
-            <p><a href="/ogf/people/">People</a></p>
-            <p><a href="/ogf/peer-reviewed-papers/">Papers</a></p>
-            <p><a href="/ogf/issues/">Archive</a></p>
+            <p><a href="/twa/topics/">Careers</a></p>
+            <p><a href="/twa/technology/">Technology</a></p>
+            <p><a href="/twa/business/">Business</a></p>
+            <p><a href="/twa/spe">SPE</a></p>
+            <p><a href="/twa/archives/">Archives</a></p>
         </div>
         <div class="col-md-3">
             <h3>DEPARTMENTS</h3>
-            <p><a href="/ogf/pfc-director/">From the PFC Technical Director</a></p>
-            <p><a href="/ogf/culture-matters/">Culture Matters</a></p>
-            <p><a href="/ogf/global-market-trends/">Global Market Trends</a></p>
-            <p><a href="/ogf/pfc-roundup/">PFC Roundup</a></p>
-            <p><a href="/ogf/technology-marketplace/">Technology Marketplace</a></p>
-{#                <p><a>Calendar</a></p>#}
-            <p><a href="/ogf/peer-reviewed-papers/">Peer-Reviewed Papers</a></p>
+            <p><a href="/twa/academia/">Academia</a></p>
+            <p><a href="/twa/business-benchmarks/">Business Benchmarks</a></p>
+            <p><a href="/twa/discover-career/">Discover-A-Career</a></p>
+            <p><a href="/twa/forum/">Forum</a></p>
+            <p><a href="/twa/hr-discussion/">HR Discussion</a></p>
+            <p><a href="/twa/pillars-industry/">Pillars of Industry</a></p>
+            <p><a href="/twa/soft-skills/">Soft Skills</a></p>
+            <p><a href="/twa/spe/">SPE Newsfeed</a></p>
+            <p><a href="/twa/student-focus/">Student Focus</a></p>
+            <p><a href="/twa//tech-topics/">Technical Topics</a></p>
+            <p><a href="/twa/twa-crowdsourcing/">TWA Crowdsourcing</a></p>
+            <p><a href="/twa/interview/">TWA Interview</a></p>
+            <p><a href="/twa/yp-newsflash/">YP Newsflash</a></p>
+            <p><a href="/twa/yps-guide-to/">YP Guide To...</a></p>
         </div>
         <div class="col-md-3">
             <h3>UTILITY</h3>
-            <p><a href="/ogf/about-ogf/">About</a></p>
+            <p><a href="/twa/about-twa/">About</a></p>
+            <p><a href="/twa/twa-editorial-board/">TWA Editorial Board</a></p>
             <p><a href="http://www.spe.org/contact/">Contact</a></p>
-            <p><a href="http://www.spe.org/publications/subscribe.php">Subscribe</a></p>
             <p><a href="http://www.spe.org/sales/publications.php">Advertise</a></p>
         </div>
         <div class="col-md-3">
@@ -144,7 +152,7 @@
             <p><a href="/ogf/ogf-main-page/">OGF</a></p>
             <p><a href="http://www.spe.org/publications/journals.php">Journals</a></p>
             <p><a href="http://www.spe.org/hsenow/">HSE Now</a></p>
-            <p><a href="http://www.spe.org/twa/">The WAY Ahead</a></p>
+            <p><a href="/twa/twa-main-page/">The Way Ahead</a></p>
         </div>
     </div>
             </div>
