TWA Briefs and Best Shots

--- a/mainsite/static/twa/css/mainstyle.scss
+++ b/mainsite/static/twa/css/mainstyle.scss
@@ -55,6 +55,10 @@ a {
 /* ************************************ */
 /* MISC  */
 
+.spacer10px {
+  height: 10px;
+}
+
 .bigbol {
   font-weight: bold;
 }
