--- a/mainsite/static/twa/css/_tiles.scss
+++ b/mainsite/static/twa/css/_tiles.scss
@@ -158,7 +158,7 @@
   }
 }
 .poi-date {
-  color:            $col-red;
+  color:            $col-orange;
   display:          block;
   text-transform:   uppercase;
   font-size:        10px !important;
@@ -526,7 +526,7 @@
     }
   }
 }
-.detailImgWrap, .detailImgWrapFull, .detailImgWrapLeft, .detailImgWrapSide, .poipic {
+.detailImgWrap, .detailImgWrapFull, .detailImgWrapLeft, .detailImgWrapSide, .poipic, .bestshotpic {
   overflow:             hidden;
   -webkit-background-size:cover;
   background-size:      cover;
@@ -625,6 +625,51 @@
 
   p {
     margin:             6px 0 0 0;
+  }
+}
+.bestshotarea {
+  margin-bottom:    10px;
+
+  p {
+    margin:         6px 0 0 0;
+  }
+}
+.bestshotbox {
+  //border:           1px solid hotpink;
+  padding:          10px;
+}
+.bestshotblurb {
+}
+.bestshotate {
+  color:            $col-orange;
+  display:          block;
+  text-transform:   uppercase;
+  font-size:        10px !important;
+  font-weight:      700;
+  letter-spacing:   1px;
+}
+//.bestshotpic {
+//    padding:            0;
+//}
+.bestshotpic {
+  //width: 50%;
+}
+
+.bestshotpic:after {
+  content: "";
+  display: block;
+  padding-bottom: 100%;
+}
+.bestshotblurb {
+  padding-left:       15px;
+  color:              $col-black;
+  h3 {
+    font-size:        15px;
+    font-weight:      $font-bold;
+    margin:           0;
+  }
+  p {
+    font-size:        12px;
   }
 }
 .whiteFade {
