--- a/mainsite/static/twa/css/_tiles.scss
+++ b/mainsite/static/twa/css/_tiles.scss
@@ -663,6 +663,8 @@
 .bestshotblurb {
   padding-left:       15px;
   color:              $col-black;
+  height:             150px;
+
   h3 {
     font-size:        15px;
     font-weight:      $font-bold;
