--- a/mainsite/static/twa/css/_tiles.scss
+++ b/mainsite/static/twa/css/_tiles.scss
@@ -660,6 +660,7 @@
   display: block;
   padding-bottom: 100%;
 }
+
 .bestshotblurb {
   padding-left:       15px;
   color:              $col-black;
@@ -668,7 +669,7 @@
   h3 {
     font-size:        15px;
     font-weight:      $font-bold;
-    margin:           0;
+    margin:           10px 0 0 0;
   }
   p {
     font-size:        12px;
