--- a/mainsite/templates/ogf_base.html
+++ b/mainsite/templates/ogf_base.html
@@ -123,7 +123,7 @@
                 <p><a href="/en/ogf/ogf-main-page/">OGF</a></p>
                 <p><a href="http://www.spe.org/publications/journals.php">Journals</a></p>
                 <p><a href="http://www.spe.org/hsenow/">HSE Now</a></p>
-                <p><a href="/twa/twa-main-page/">The Way Ahead</a></p>
+                <p><a href="/en/twa/twa-main-page/">The Way Ahead</a></p>
             </div>
         </div>
     </div>
