--- a/mainsite/templates/twa_base.html
+++ b/mainsite/templates/twa_base.html
@@ -115,48 +115,48 @@
                 <div class="footerURight col-md-9">
                     <div class="col-md-2 col-md-offset-1">
                         <h3>MAIN</h3>
-                        <p><a href="/twa/topics/">Careers</a></p>
-                        <p><a href="/twa/technology/">Technology</a></p>
-                        <p><a href="/twa/business/">Business</a></p>
-                        <p><a href="/twa/spe">SPE</a></p>
-                        <p><a href="/twa/archives/">Archives</a></p>
+                        <p><a href="https://www.spe.org/en/twa/careers/">Careers</a></p>
+                        <p><a href="https://www.spe.org/en/twa/technology/">Technology</a></p>
+                        <p><a href="https://www.spe.org/en/twa/business/">Business</a></p>
+                        <p><a href="https://www.spe.org/en/twa/spe">SPE</a></p>
+                        <p><a href="https://www.spe.org/en/twa/archives/">Archives</a></p>
                     </div>
                     <div class="col-md-3">
                         <h3>DEPARTMENTS</h3>
-                        <p><a href="/twa/academia/">Academia</a></p>
-                        <p><a href="/twa/business-benchmarks/">Business Benchmarks</a></p>
-                        <p><a href="/twa/discover-career/">Discover-A-Career</a></p>
-                        <p><a href="/twa/forum/">Forum</a></p>
-                        <p><a href="/twa/hr-discussion/">HR Discussion</a></p>
-                        <p><a href="/twa/pillars-industry/">Pillars of Industry</a></p>
-                        <p><a href="/twa/soft-skills/">Soft Skills</a></p>
-
+                        <p><a href="https://www.spe.org/en/twa/academia/">Academia</a></p>
+                        <p><a href="https://www.spe.org/en/twa/business-benchmarks/">Business Benchmarks</a></p>
+                        <p><a href="https://www.spe.org/en/twa/discover-career/">Discover A Career</a></p>
+                        <p><a href="https://www.spe.org/en/twa/forum/">Forum</a></p>
+                        <p><a href="https://www.spe.org/en/twa/hr-discussion/">HR Discussion</a></p>
+                        <p><a href="https://www.spe.org/en/twa/pillars-industry/">Pillars of Industry</a></p>
+                        <p><a href="https://www.spe.org/en/twa/soft-skills/">Soft Skills</a></p>
                     </div>
                     <div class="col-md-3">
                         <h3>&nbsp;</h3>
-                        <p><a href="/twa/spe/">SPE Newsfeed</a></p>
-                        <p><a href="/twa/student-focus/">Student Focus</a></p>
-                        <p><a href="/twa//tech-topics/">Technical Topics</a></p>
-                        <p><a href="/twa/twa-crowdsourcing/">TWA Crowdsourcing</a></p>
-                        <p><a href="/twa/interview/">TWA Interview</a></p>
-                        <p><a href="/twa/yp-newsflash/">YP Newsflash</a></p>
-                        <p><a href="/twa/yps-guide-to/">YP Guide To...</a></p>
+                        <p><a href="https://www.spe.org/en/twa/spe/">SPE Newsfeed</a></p>
+                        <p><a href="https://www.spe.org/en/twa/student-focus/">Student Focus</a></p>
+                        <p><a href="https://www.spe.org/en/twa/tech-topics/">Technical Topics</a></p>
+                        <p><a href="https://www.spe.org/en/twa/twa-crowdsourcing/">TWA Crowdsourcing</a></p>
+                        <p><a href="https://www.spe.org/en/twa/interview/">TWA Interview</a></p>
+                        <p><a href="https://www.spe.org/en/twa/your-best-shot/">Your Best Shot</a></p>
+                        <p><a href="https://www.spe.org/en/twa/yp-newsflash/">YP Newsflash</a></p>
+                        <p><a href="https://www.spe.org/en/twa/yps-guide-to/">YP's Guide To...</a></p>
                     </div>
                     <div class="col-md-2">
                         <h3>UTILITY</h3>
-                        <p><a href="/twa/about-twa/">About</a></p>
-                        <p><a href="/twa/twa-editorial-board/">TWA Editorial Board</a></p>
-                        <p><a href="http://www.spe.org/contact/">Contact</a></p>
-                        <p><a href="http://www.spe.org/sales/publications.php">Advertise</a></p>
+                        <p><a href="https://www.spe.org/en/twa/archives//twa/about-twa/">About</a></p>
+                        <p><a href="https://www.spe.org/en/twa/archives//twa/twa-editorial-board/">TWA Editorial Board</a></p>
+                        <p><a href="https://www.spe.org/en/twa/contact/">Contact</a></p>
+                        <p><a href="https://www.spe.org/en/twa/advertise/">Advertise</a></p>
                     </div>
                     <div class="col-md-1">
                         <h3>SPE</h3>
                         <p><a href="http://www.spe.org/">SPE</a></p>
                         <p><a href="http://www.spe.org/jpt/">JPT</a></p>
-                        <p><a href="/ogf/ogf-main-page/">OGF</a></p>
+                        <p><a href="https://www.spe.org/en/ogf/ogf-main-page/">OGF</a></p>
                         <p><a href="http://www.spe.org/publications/journals.php">Journals</a></p>
                         <p><a href="http://www.spe.org/hsenow/">HSE Now</a></p>
-                        <p><a href="/twa/twa-main-page/">The Way Ahead</a></p>
+                        <p><a href="https://www.spe.org/en/twa/twa-main-page/">The Way Ahead</a></p>
                     </div>
                 </div>
             </div>
