--- a/spe_blog/templates/spe_blog/plugins/brief_list.html
+++ b/spe_blog/templates/spe_blog/plugins/brief_list.html
@@ -36,8 +36,14 @@
 {% empty %}
     <p class="well">{% trans "No editorial available" %}</p>
 {% endfor %}
+<!-- SHOW ALL BEGIN -->
+{% if show_all_url and show_all_text %}
+            <div class="row"><div class="col-xs-12 see-all-div"><a class="see-all" id="features" href="{{ show_all_url }}">{{ show_all_text }}<span></span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a></div></div>
+{% endif %}
+<!-- SHOW ALL END -->
 
 </div>
+
 
 {% addtoblock "js" %}
     <script type="text/javascript" charset="utf-8">
