--- a/mainsite/static/jpt/css/mainstyle.scss
+++ b/mainsite/static/jpt/css/mainstyle.scss
@@ -1,18 +1,28 @@
 /* =================================================================== */
-/* MAIN STYLE SHEET FOR JPT
+/* MAIN STYLE SHEET FOR OGF
 ====================================================================== */
 @import 'vars';
+
+.col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-xs-1, .col-xs-10, .col-xs-11, .col-xs-12, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9 {
+  padding: 0;
+}
 
 /* ************************ */
 /* BASE HTML STYLES         */
 body {
   font-family:            $font-main;
+  font-size:              14px !important;
 }
 h1, h2, h3, h4 {
   font-family:            $font-titles;
   font-weight:            $font-bold;
 }
-
+h3 {
+  font-size:              20px;
+}
+h2 {
+  font-size:              16px;
+}
 * {
   -webkit-border-radius:  0 !important;
   -moz-border-radius:     0 !important;
@@ -30,20 +40,33 @@ a {
     text-decoration:      none;
   }
 }
+.dummyClass {
+  font-size:              10px;
+}
 
 /* ************************ */
 /* HEAD FOOT & CONTENT      */
-//@import 'header';
-//@import 'footer';
-//@import 'content';
-//@import 'tiles';
-//@import 'adzones';
+@import 'header';
+@import 'footer';
+@import 'content';
+@import 'tiles';
+@import 'adzones';
 
 /* ************************************ */
 /* MISC  */
 
+.spacer10px {
+  height: 10px;
+}
+
+.bigbol {
+  font-weight: bold;
+}
+.activeLink {
+  color:              $col-yellow !important;
+}
 .red {
-  color:              $col-brightred !important;
+  color:              $col-red !important;
 }
 .yellow {
   color:              $col-yellow !important;
@@ -75,4 +98,85 @@ a {
   font-weight:        $font-bold;
   font-size:          12px;
   letter-spacing:     2px;
+}
+.cke_maximized {
+  margin-top:         50px !important;
+}
+.more {
+  float:              right;
+  color:              $col-black;
+
+  &:hover {
+    color:            $col-bluehover;
+  }
+}
+.moreB {
+  color:              $col-black;
+  float:  right;
+
+  &:hover {
+    color:            $col-bluehover;
+  }
+}
+.see-all-div {
+  margin:             15px 0;
+  padding:            10px 0 0 0;
+  border-top:         1px solid $col-notsolightgrey;
+}
+.see-all {
+  font-size:          15px;
+  font-weight:        $font-bold;
+  color:              $col-speblue;
+
+  &:hover {
+    color:            $col-bluehover;
+  }
+
+  i {
+    margin-left:      25px;
+  }
+}
+
+@media print {
+  html * {
+    font-family: Arial, sans-serif;
+    font-size: 20pt;
+    width:  100%;
+  }
+  body {
+    //background: white;
+    font-size: 20pt;
+    width:  100%;
+  }
+  body * {
+    visibility: hidden;
+  }
+  #printMe, #printMe * {
+    visibility: visible;
+    font-size: 20pt;
+    width:  100%;
+  }
+  .dontPrintMe, .dontPrintMe * {
+    visibility: hidden;
+    display: none;
+  }
+  #printMe {
+    position: absolute;
+    left: 0;
+    top: 0;
+    font-size: 20pt;
+    width:  100%;
+  }
+  .articleBodyText, .articleBodyText p {
+    font-family: Arial, sans-serif;
+    font-size: 20pt;
+    width:  100%;
+  }
+}
+.panel {
+  background-color: transparent;
+}
+
+.bscol .tile-editorial {
+  margin-top: 10px;
 }
