--- a/mainsite/templates/jpt_base.html
+++ b/mainsite/templates/jpt_base.html
@@ -3,9 +3,16 @@
 {% load menu_tags %}
 
 {% block web_fonts %}
-{{ block.super }}
+
+    {% include 'include_scripts.html' %}
+
+    {{ block.super }}
     <script src="https://use.typekit.net/xwk3nys.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
+{#    <link href='https://fonts.googleapis.com/css?family=Oswald:400,700,300' rel='stylesheet' type='text/css'>#}
+{#    <link href='https://fonts.googleapis.com/css?family=Bitter:700,400' rel='stylesheet' type='text/css'>#}
+{#    <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,700,300,100' rel='stylesheet' type='text/css'>#}
+
 {% endblock web_fonts %}
 
 {% block css_base %}
@@ -20,50 +27,59 @@
     <!-- HEADER Begin -->
         <div class="row adZone1" id="adZone1">
             <div class="col-md-12 text-center" id="adLeaderboard">
-                <!-- AdSpeed.com Tag 8.0.2 for [Zone] OGF 1 728x90 [Any Dimension] -->
-                <script type="text/javascript" src="http://g.adspeed.net/ad.php?do=js&zid=79084&oid=7699&wd=-1&ht=-1&target=_blank&noerror=1"></script>
-                <!-- AdSpeed.com End -->
+                {% placeholder "ad zone 1" %}
             </div>
         </div>
 
-        <div class="row" id="topbar">
-            <div class="col-sm-6 topbarcol">
-                <ul class="topbarmenuleft">
-                    <li><a href="http://www.spe.org/">SPE</a></li>
-                    <li><a href="/">JPT</a></li>
-                    <li><a href="/" class="yellow">OGF</a></li>
-                    <li><a href="/">HSE Now</a></li>
-                    <li><a href="/">The WAY Ahead</a></li>
-                </ul>
-            </div>
-            <div class="col-sm-4 text-right topbarcol">
-                <ul class="topbarmenuright">
-                    <li><a href=""><i class="fa fa-facebook"></i></a></li>
-                    <li><a href=""><i class="fa fa-twitter"></i></a></li>
-                    <li><a href=""><i class="fa fa-linkedin"></i></a></li>
-                    <li><a href=""><i class="fa fa-youtube-play"></i></a></li>
-                </ul>
-            </div>
-            <div class="col-sm-2 text-center topbarcol" id="signin">
-                <a href=""><i class="fa fa-user"></i> Sign In</a>
+        <!-- topbar -->
+{#        {% include 'include_topbar.html' %}#}
+        <div class="row dontPrintMe" id="topbar">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-6 topbarcol">
+                        <ul class="topbarmenuleft">
+                            <li><a href="http://www.spe.org/">SPE</a></li>
+                            <li><a href="http://www.spe.org/jpt/">JPT</a></li>
+                            <li><a href="https://www.spe.org/en/ogf/ogf-main-page/">OGF</a></li>
+                            <li><a href="http://www.spe.org/hsenow/">HSE Now</a></li>
+                            <li><a href="http://www.spe.org/twa/">The Way Ahead</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-4 text-right topbarcol">
+                        <ul class="topbarmenuright">
+                            <li><a href="https://www.facebook.com/spemembers" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="https://twitter.com/SPEtweets" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="https://www.linkedin.com/groups/57660/profile"><i class="fa fa-linkedin" target="_blank"></i></a></li>
+                            <li><a href="https://www.youtube.com/user/2012SPE"><i class="fa fa-youtube-play" target="_blank"></i></a></li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-2 text-center topbarcol" id="signin">
+                        {% if login.url %}
+                        <li><a href="{{ login.url }}" id="global_login" class="loginLink"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> {{ login.label }}</a></li>
+                        {% endif %}
+                    </div>
+                </div>
             </div>
 
         </div>
 
-        <div class="row" id="menubar">
-            <div class="col-md-3" id="mainLogo">
-                <img src="{% static 'ogf/img/ogf-logo-horizontal.svg' %}"/>
-            </div>
-            <div class="col-md-9 text-right">
-                <ul class="pubMenu">
-                    {% show_menu 0 0 0 0 %}
-                    <li><a href="/articles/publications/ogf/issues">ISSUES</a></li>
-                    <li class="searchIcon"><a role="button" data-toggle="collapse" href="#collapseSearch" aria-expanded="false" aria-controls="collapseExample"><i class="fa fa-search"></i></a></li>
-                </ul>
+        <div class="row dontPrintMe" id="menubar">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12 col-sm-3 col-md-2" id="mainLogo">
+                        <a href="/twa/twa-main-page/"><img src="{% static 'jpt/img/JPT_wText_Vertical.svg' %}" class="img-responsive"></a>
+                    </div>
+                    <div class="col-md-9 text-right">
+                        <ul class="pubMenu">
+                            {% show_menu 1 100 0 1 %}
+                            <li class="searchIcon"><a role="button" data-toggle="collapse" href="#collapseSearch" aria-expanded="false" aria-controls="collapseExample"><i class="fa fa-search"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
 
-        <div class="row searchbar collapse" id="collapseSearch">
+        <div class="row searchbar collapse dontPrintMe" id="collapseSearch">
             <div class="col-sm-12 text-right">
                 <form class="form-inline">
                     <div class="input-group">
@@ -83,88 +99,87 @@
 
 {% block content_footer %}
     <!-- FOOTER Begin -->
-    <div class="footerUpper row">
-        <div class="footerULeft col-md-3">
-            <img src="{% static 'ogf/img/ogf-logo-horizontal.svg' %}" class="footerLogo">
-            <ul class="footerSocial">
-                <li><a href=""><i class="fa fa-facebook"></i></a></li>
-                <li><a href=""><i class="fa fa-twitter"></i></a></li>
-                <li><a href=""><i class="fa fa-linkedin"></i></a></li>
-                <li><a href=""><i class="fa fa-youtube-play"></i></a></li>
-            </ul>
-            <p class="copyright">&copy;2003-2016 Society of Petroleum Engineers, All Rights Reserved.</p>
-        </div>
-        <div class="footerURight col-md-9">
-            <div class="col-md-2 col-md-offset-1">
-                <h3>MAIN</h3>
-                <p><a>Topics</a></p>
-                <p><a>Technology</a></p>
-                <p><a>News</a></p>
-                <p><a>People</a></p>
-                <p><a>Papers</a></p>
-                <p><a>Magazine</a></p>
-            </div>
-            <div class="col-md-3">
-                <h3>DEPARTMENTS</h3>
-                <p><a>From the PFC Technical Director</a></p>
-                <p><a>Culture Matters</a></p>
-                <p><a>Global Market Trends</a></p>
-                <p><a>PFC Roundup</a></p>
-                <p><a>Technology Marketplace</a></p>
-                <p><a>Calendar</a></p>
-                <p><a>Peer-Reviewed Papers</a></p>
-            </div>
-            <div class="col-md-3">
-                <h3>UTILITY</h3>
-                <p><a>About</a></p>
-                <p><a>Contact</a></p>
-                <p><a>Subscribe</a></p>
-                <p><a>Advertise</a></p>
-                <p><a>Archive</a></p>
-                <p><a>Submit a Paper<br>for Peer Review</a></p>
-            </div>
-            <div class="col-md-3">
-                <h3>SPE</h3>
-                <p><a>SPE</a></p>
-                <p><a>JPT</a></p>
-                <p><a>OGF</a></p>
-                <p><a>SPE Journals</a></p>
-                <p><a>HSE Now</a></p>
+    <div class="footerUpper row dontPrintMe">
+        <div class="container">
+            <div class="row">
+                <div class="footerULeft col-md-3">
+                    <img src="{% static 'jpt/img/JPT_wText_Horizontal.svg' %}" class="footerLogo">
+                    <ul class="footerSocial">
+                        <li><a href="https://www.facebook.com/spemembers" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://twitter.com/SPEtweets" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="https://www.linkedin.com/groups/57660/profile"><i class="fa fa-linkedin" target="_blank"></i></a></li>
+                        <li><a href="https://www.youtube.com/user/2012SPE"><i class="fa fa-youtube-play" target="_blank"></i></a></li>
+                    </ul>
+                    <p class="copyright">&copy;2003-2016 Society of Petroleum Engineers, All Rights Reserved.</p>
+                </div>
+                <div class="footerURight col-md-9">
+                    <div class="col-md-2 col-md-offset-1">
+                        <h3>MAIN</h3>
+                        <p><a href="https://www.spe.org/en/twa/careers/">Careers</a></p>
+                        <p><a href="https://www.spe.org/en/twa/technology/">Technology</a></p>
+                        <p><a href="https://www.spe.org/en/twa/business/">Business</a></p>
+                        <p><a href="https://www.spe.org/en/twa/spe">SPE</a></p>
+                        <p><a href="https://www.spe.org/en/twa/archives/">Archives</a></p>
+                    </div>
+                    <div class="col-md-3">
+                        <h3>DEPARTMENTS</h3>
+                        <p><a href="https://www.spe.org/en/twa/academia/">Academia</a></p>
+                        <p><a href="https://www.spe.org/en/twa/business-benchmarks/">Business Benchmarks</a></p>
+                        <p><a href="https://www.spe.org/en/twa/discover-career/">Discover A Career</a></p>
+                        <p><a href="https://www.spe.org/en/twa/forum/">Forum</a></p>
+                        <p><a href="https://www.spe.org/en/twa/hr-discussion/">HR Discussion</a></p>
+                        <p><a href="https://www.spe.org/en/twa/pillars-industry/">Pillars of Industry</a></p>
+                        <p><a href="https://www.spe.org/en/twa/soft-skills/">Soft Skills</a></p>
+                    </div>
+                    <div class="col-md-3">
+                        <h3>&nbsp;</h3>
+                        <p><a href="https://www.spe.org/en/twa/spe/">SPE Newsfeed</a></p>
+                        <p><a href="https://www.spe.org/en/twa/student-focus/">Student Focus</a></p>
+                        <p><a href="https://www.spe.org/en/twa/tech-topics/">Technical Topics</a></p>
+                        <p><a href="https://www.spe.org/en/twa/twa-crowdsourcing/">TWA Crowdsourcing</a></p>
+                        <p><a href="https://www.spe.org/en/twa/interview/">TWA Interview</a></p>
+                        <p><a href="https://www.spe.org/en/twa/your-best-shot/">Your Best Shot</a></p>
+                        <p><a href="https://www.spe.org/en/twa/yp-newsflash/">YP Newsflash</a></p>
+                        <p><a href="https://www.spe.org/en/twa/yps-guide-to/">YP's Guide To...</a></p>
+                    </div>
+                    <div class="col-md-2">
+                        <h3>UTILITY</h3>
+                        <p><a href="https://www.spe.org/en/twa/archives//twa/about-twa/">About</a></p>
+                        <p><a href="https://www.spe.org/en/twa/archives//twa/twa-editorial-board/">TWA Editorial Board</a></p>
+                        <p><a href="https://www.spe.org/en/twa/contact/">Contact</a></p>
+                        <p><a href="https://www.spe.org/en/twa/advertise/">Advertise</a></p>
+                    </div>
+                    <div class="col-md-1">
+                        <h3>SPE</h3>
+                        <p><a href="http://www.spe.org/">SPE</a></p>
+                        <p><a href="http://www.spe.org/jpt/">JPT</a></p>
+                        <p><a href="https://www.spe.org/en/ogf/ogf-main-page/">OGF</a></p>
+                        <p><a href="http://www.spe.org/publications/journals.php">Journals</a></p>
+                        <p><a href="http://www.spe.org/hsenow/">HSE Now</a></p>
+                        <p><a href="https://www.spe.org/en/twa/twa-main-page/">The Way Ahead</a></p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    <div class="footerLower">
-        <img src="{% static 'ogf/img/spe-logo-icon.svg' %}"/>
-        <ul class="footerSPEMenu">
-            <li><a href="">MEMBERSHIP</a></li>
-            <li><a href="">EVENTS</a></li>
-            <li><a href="">PUBLICATIONS</a></li>
-            <li><a href="">TRAINING</a></li>
-            <li><a href="">RESOURCES</a></li>
+    <div class="footerLower dontPrintMe">
+        <div class="container">
+            <div class="row">
+                <a href="http://www.spe.org/"><img src="{% static 'ogf/img/spe-logo-icon.svg' %}"/></a>
+                <ul class="footerSPEMenu">
+            <li><a href="http://www.spe.org/members/">MEMBERSHIP</a></li>
+            <li><a href="http://www.spe.org/events/about-events.php">EVENTS</a></li>
+            <li><a href="http://www.spe.org/publications/">PUBLICATIONS</a></li>
+            <li><a href="http://www.spe.org/training/">TRAINING</a></li>
+            <li><a href="http://www.spe.org/industry/">RESOURCES</a></li>
         </ul>
+            </div>
+        </div>
     </div>
     <!-- FOOTER END -->
         <!-- div id="testmessage">REPLACE THIS</div -->
 
-    {% addtoblock "js" %}
-        <script type="text/javascript" charset="utf-8">
-            $( document ).ready(function() {
+    {% include 'include_hide_ads.html' %}
 
-{#                $("#testmessage").text("BEEN REPLACED");#}
-
-                if ($("#adLeaderboard").find("img").length > 0) {
-                    //do something
-{#                    $("#adZone1").text("HAS IMAGE");#}
-                } else {
-                    // do something else
-                    $("#adZone1").hide(0);
-                }
-
-            });
-        </script>
-    {%  endaddtoblock %}
 
 {% endblock content_footer %}
-
-
-
