--- a/mainsite/templates/jpt_subpage.html
+++ b/mainsite/templates/jpt_subpage.html
@@ -4,17 +4,20 @@
 {% block title %}{% page_attribute "page_title" %}{% endblock title %}
 
 {% block content %}
+
+<div class="container">
     <div class="row content-area">
-        <div class="col-sm-8 col-lg-7 col-lg-offset-1 areaContent">
+        <div class="col-sm-8 areaContent">
             {% placeholder "notice" %}
+            {% placeholder "page-title" %}
             {% placeholder "content" %}
         </div>
-        <div class="col-sm-4 col-lg-3 areaRightSide">
+        <div class="col-sm-4 areaRightSide dontPrintMe">
             {% placeholder "aside" %}
             {% placeholder "additional-content" %}
         </div>
     </div>
-
-    {% include 'z_boostrap_size_indicator.html' %}
+</div>
+    {% include 'include_hide_ads.html' %}
 
 {% endblock content %}
