TWA Menu 2 & JPT Footer temp fix

--- a/mainsite/static/twa/css/_header.scss
+++ b/mainsite/static/twa/css/_header.scss
@@ -142,3 +142,11 @@
   background-color:     $col-notsolightgrey;
   padding:              3px 0;
 }
+.menu2cont {
+  background-color:     $col-grey;
+  width:                100%;
+}
+.menu2 {
+  color:                white;
+  padding:              0;
+}
