--- a/mainsite/static/twa/css/_vars.scss
+++ b/mainsite/static/twa/css/_vars.scss
@@ -8,9 +8,11 @@ $col-black:             #2a2a2a;
 $col-copygrey:          #3d4044;
 $col-grey:              #57575a;
 $col-drkgrey:           #424143;
+$col-darkgrey:           $col-drkgrey;
 $col-basegrey:          grey;
 $col-boxshadow:         #b4b4b9;
 $col-notsolightgrey:    #e4e1d8;
+$col-sprlghtgry:        #e7e7e7;
 $col-lightgrey:         #f2efea;
 $col-lightgrey2:        #f4f4f4;
 $col-blue:              #181c41;
@@ -20,6 +22,8 @@ $col-speblue:           #26416c;
 $col-speblue2:          #365d98;
 $col-twablue:           #32bbbc;
 $col-bluehover:         #2d9e9f;
+$col-hoverblue:         $col-bluehover;
+$col-bluegrey:          #646e93;
 $col-fbShare:           #3B5998;
 $col-lInShare:          #007BB5;
 $col-textblue:          #a3bce4;
