--- a/mainsite/templates/jpt_base.html
+++ b/mainsite/templates/jpt_base.html
@@ -113,44 +113,44 @@
                     <p class="copyright">&copy;2003-2016 Society of Petroleum Engineers, All Rights Reserved.</p>
                 </div>
                 <div class="footerURight col-md-9">
-                    <div class="col-md-2 col-md-offset-1">
-                        <h3>MAIN</h3>
-                        <p><a href="https://www.spe.org/en/twa/careers/">Careers</a></p>
-                        <p><a href="https://www.spe.org/en/twa/technology/">Technology</a></p>
-                        <p><a href="https://www.spe.org/en/twa/business/">Business</a></p>
-                        <p><a href="https://www.spe.org/en/twa/spe">SPE</a></p>
-                        <p><a href="https://www.spe.org/en/twa/archives/">Archives</a></p>
-                    </div>
-                    <div class="col-md-3">
-                        <h3>DEPARTMENTS</h3>
-                        <p><a href="https://www.spe.org/en/twa/academia/">Academia</a></p>
-                        <p><a href="https://www.spe.org/en/twa/business-benchmarks/">Business Benchmarks</a></p>
-                        <p><a href="https://www.spe.org/en/twa/discover-career/">Discover A Career</a></p>
-                        <p><a href="https://www.spe.org/en/twa/forum/">Forum</a></p>
-                        <p><a href="https://www.spe.org/en/twa/hr-discussion/">HR Discussion</a></p>
-                        <p><a href="https://www.spe.org/en/twa/pillars-industry/">Pillars of Industry</a></p>
-                        <p><a href="https://www.spe.org/en/twa/soft-skills/">Soft Skills</a></p>
-                    </div>
-                    <div class="col-md-3">
-                        <h3>&nbsp;</h3>
-                        <p><a href="https://www.spe.org/en/twa/spe/">SPE Newsfeed</a></p>
-                        <p><a href="https://www.spe.org/en/twa/student-focus/">Student Focus</a></p>
-                        <p><a href="https://www.spe.org/en/twa/tech-topics/">Technical Topics</a></p>
-                        <p><a href="https://www.spe.org/en/twa/twa-crowdsourcing/">TWA Crowdsourcing</a></p>
-                        <p><a href="https://www.spe.org/en/twa/interview/">TWA Interview</a></p>
-                        <p><a href="https://www.spe.org/en/twa/your-best-shot/">Your Best Shot</a></p>
-                        <p><a href="https://www.spe.org/en/twa/yp-newsflash/">YP Newsflash</a></p>
-                        <p><a href="https://www.spe.org/en/twa/yps-guide-to/">YP's Guide To...</a></p>
-                    </div>
-                    <div class="col-md-2">
-                        <h3>UTILITY</h3>
-                        <p><a href="https://www.spe.org/en/twa/archives//twa/about-twa/">About</a></p>
-                        <p><a href="https://www.spe.org/en/twa/archives//twa/twa-editorial-board/">TWA Editorial Board</a></p>
-                        <p><a href="https://www.spe.org/en/twa/contact/">Contact</a></p>
-                        <p><a href="https://www.spe.org/en/twa/advertise/">Advertise</a></p>
-                    </div>
-                    <div class="col-md-1">
-                        <h3>SPE</h3>
+{#                    <div class="col-md-2 col-md-offset-1">#}
+{#                        <h3>MAIN</h3>#}
+{#                        <p><a href="https://www.spe.org/en/twa/careers/">Careers</a></p>#}
+{#                        <p><a href="https://www.spe.org/en/twa/technology/">Technology</a></p>#}
+{#                        <p><a href="https://www.spe.org/en/twa/business/">Business</a></p>#}
+{#                        <p><a href="https://www.spe.org/en/twa/spe">SPE</a></p>#}
+{#                        <p><a href="https://www.spe.org/en/twa/archives/">Archives</a></p>#}
+{#                    </div>#}
+{#                    <div class="col-md-3">#}
+{#                        <h3>DEPARTMENTS</h3>#}
+{#                        <p><a href="https://www.spe.org/en/twa/academia/">Academia</a></p>#}
+{#                        <p><a href="https://www.spe.org/en/twa/business-benchmarks/">Business Benchmarks</a></p>#}
+{#                        <p><a href="https://www.spe.org/en/twa/discover-career/">Discover A Career</a></p>#}
+{#                        <p><a href="https://www.spe.org/en/twa/forum/">Forum</a></p>#}
+{#                        <p><a href="https://www.spe.org/en/twa/hr-discussion/">HR Discussion</a></p>#}
+{#                        <p><a href="https://www.spe.org/en/twa/pillars-industry/">Pillars of Industry</a></p>#}
+{#                        <p><a href="https://www.spe.org/en/twa/soft-skills/">Soft Skills</a></p>#}
+{#                    </div>#}
+{#                    <div class="col-md-3">#}
+{#                        <h3>&nbsp;</h3>#}
+{#                        <p><a href="https://www.spe.org/en/twa/spe/">SPE Newsfeed</a></p>#}
+{#                        <p><a href="https://www.spe.org/en/twa/student-focus/">Student Focus</a></p>#}
+{#                        <p><a href="https://www.spe.org/en/twa/tech-topics/">Technical Topics</a></p>#}
+{#                        <p><a href="https://www.spe.org/en/twa/twa-crowdsourcing/">TWA Crowdsourcing</a></p>#}
+{#                        <p><a href="https://www.spe.org/en/twa/interview/">TWA Interview</a></p>#}
+{#                        <p><a href="https://www.spe.org/en/twa/your-best-shot/">Your Best Shot</a></p>#}
+{#                        <p><a href="https://www.spe.org/en/twa/yp-newsflash/">YP Newsflash</a></p>#}
+{#                        <p><a href="https://www.spe.org/en/twa/yps-guide-to/">YP's Guide To...</a></p>#}
+{#                    </div>#}
+{#                    <div class="col-md-2">#}
+{#                        <h3>UTILITY</h3>#}
+{#                        <p><a href="https://www.spe.org/en/twa/archives//twa/about-twa/">About</a></p>#}
+{#                        <p><a href="https://www.spe.org/en/twa/archives//twa/twa-editorial-board/">TWA Editorial Board</a></p>#}
+{#                        <p><a href="https://www.spe.org/en/twa/contact/">Contact</a></p>#}
+{#                        <p><a href="https://www.spe.org/en/twa/advertise/">Advertise</a></p>#}
+{#                    </div>#}
+                    <div class="col-md-2 col-md-offset-3">
+{#                        <h3>SPE</h3>#}
                         <p><a href="http://www.spe.org/">SPE</a></p>
                         <p><a href="http://www.spe.org/jpt/">JPT</a></p>
                         <p><a href="https://www.spe.org/en/ogf/ogf-main-page/">OGF</a></p>
