--- a/mainsite/static/twa/css/mainstyle.scss
+++ b/mainsite/static/twa/css/mainstyle.scss
@@ -46,6 +46,7 @@ a {
 
 /* ************************ */
 /* HEAD FOOT & CONTENT      */
+@import 'yamm3';
 @import 'header';
 @import 'footer';
 @import 'content';
