--- a/mainsite/templates/twa_base.html
+++ b/mainsite/templates/twa_base.html
@@ -91,6 +91,39 @@
                 </form>
             </div>
         </div>
+        <div class="container menu2cont">
+            <div class="container menu2">
+                <div class="row">
+                    <nav class="col-xs-12 navbar yamm navbar-default text-right" role="navigation">
+                        <ul class="nav navbar-nav">
+                            <li><a href="http://www.spe.org/">About TWA</a></li>
+                            <li><a href="http://www.spe.org/">TWA Editorial Board</a></li>
+                            <li><a href="http://www.spe.org/">Contact TWA</a></li>
+                            <li class="dropdown"><a href="http://www.spe.org/" data-toggle="dropdown" class="dropdown-toggle">Departments</a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="/">Academia</a></li>
+                                    <li><a href="/">Business Benchmarks</a></li>
+                                    <li><a href="/">Discover a Career</a></li>
+                                    <li><a href="/">Forum</a></li>
+                                    <li><a href="/">HR Discussion</a></li>
+                                    <li><a href="/">Pillars of Industry</a></li>
+                                    <li><a href="/">Soft Skills</a></li>
+                                    <li><a href="/">SPE Newsfeed</a></li>
+                                    <li><a href="/">Student Focus</a></li>
+                                    <li><a href="/">Technical Topics</a></li>
+                                    <li><a href="/">TWA Crowdsourcing</a></li>
+                                    <li><a href="/">TWA Interview</a></li>
+                                    <li><a href="/">Your Best Shot</a></li>
+                                    <li><a href="/">YP Newsflash</a></li>
+                                    <li><a href="/">YP's Guide to...</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
+
     <!-- HEADER END -->
 
 {% endblock content_header %}
