--- a/mainsite/templates/twa_base.html
+++ b/mainsite/templates/twa_base.html
@@ -96,26 +96,26 @@
                 <div class="row">
                     <nav class="col-xs-12 navbar yamm navbar-default text-right" role="navigation">
                         <ul class="nav navbar-nav">
-                            <li><a href="http://www.spe.org/">About TWA</a></li>
-                            <li><a href="http://www.spe.org/">TWA Editorial Board</a></li>
-                            <li><a href="http://www.spe.org/">Contact TWA</a></li>
-                            <li class="dropdown"><a href="http://www.spe.org/" data-toggle="dropdown" class="dropdown-toggle">Departments</a>
+                            <li><a href="https://djangoprod.spe.org/en/twa/about-twa/">About TWA</a></li>
+                            <li><a href="https://djangoprod.spe.org/en/twa/twa-editorial-board/">TWA Editorial Board</a></li>
+                            <li><a href="https://www.spe.org/en/twa/contact/">Contact TWA</a></li>
+                            <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Departments</a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="/">Academia</a></li>
-                                    <li><a href="/">Business Benchmarks</a></li>
-                                    <li><a href="/">Discover a Career</a></li>
-                                    <li><a href="/">Forum</a></li>
-                                    <li><a href="/">HR Discussion</a></li>
-                                    <li><a href="/">Pillars of Industry</a></li>
-                                    <li><a href="/">Soft Skills</a></li>
-                                    <li><a href="/">SPE Newsfeed</a></li>
-                                    <li><a href="/">Student Focus</a></li>
-                                    <li><a href="/">Technical Topics</a></li>
-                                    <li><a href="/">TWA Crowdsourcing</a></li>
-                                    <li><a href="/">TWA Interview</a></li>
-                                    <li><a href="/">Your Best Shot</a></li>
-                                    <li><a href="/">YP Newsflash</a></li>
-                                    <li><a href="/">YP's Guide to...</a></li>
+                                    <li><a href="https://www.spe.org/en/twa/academia/">Academia</a></li>
+                                    <li><a href="https://www.spe.org/en/twa/business-benchmarks/">Business Benchmarks</a></li>
+                                    <li><a href="https://www.spe.org/en/twa/discover-career/">Discover a Career</a></li>
+                                    <li><a href="https://www.spe.org/en/twa/forum/">Forum</a></li>
+                                    <li><a href="https://www.spe.org/en/twa/hr-discussion/">HR Discussion</a></li>
+                                    <li><a href="https://www.spe.org/en/twa/pillars-industry/">Pillars of Industry</a></li>
+                                    <li><a href="https://www.spe.org/en/twa/soft-skills/">Soft Skills</a></li>
+                                    <li><a href="https://www.spe.org/en/twa/spe/">SPE Newsfeed</a></li>
+                                    <li><a href="https://www.spe.org/en/twa/student-focus/">Student Focus</a></li>
+                                    <li><a href="https://www.spe.org/en/twa/tech-topics/">Technical Topics</a></li>
+                                    <li><a href="https://www.spe.org/en/twa/twa-crowdsourcing/">TWA Crowdsourcing</a></li>
+                                    <li><a href="https://www.spe.org/en/twa/interview/">TWA Interview</a></li>
+                                    <li><a href="https://www.spe.org/en/twa/your-best-shot/">Your Best Shot</a></li>
+                                    <li><a href="https://www.spe.org/en/twa/yp-newsflash/">YP Newsflash</a></li>
+                                    <li><a href="https://www.spe.org/en/twa/yps-guide-to/">YP's Guide to...</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -143,7 +143,7 @@
                         <li><a href="https://www.linkedin.com/groups/57660/profile"><i class="fa fa-linkedin" target="_blank"></i></a></li>
                         <li><a href="https://www.youtube.com/user/2012SPE"><i class="fa fa-youtube-play" target="_blank"></i></a></li>
                     </ul>
-                    <p class="copyright">&copy;2003-2016 Society of Petroleum Engineers, All Rights Reserved.</p>
+                    <p class="copyright">&copy; 2003-2016 Society of Petroleum Engineers, All Rights Reserved.</p>
                 </div>
                 <div class="footerURight col-md-9">
                     <div class="col-md-2 col-md-offset-1">
@@ -177,8 +177,8 @@
                     </div>
                     <div class="col-md-2">
                         <h3>UTILITY</h3>
-                        <p><a href="https://www.spe.org/en/twa/archives//twa/about-twa/">About</a></p>
-                        <p><a href="https://www.spe.org/en/twa/archives//twa/twa-editorial-board/">TWA Editorial Board</a></p>
+                        <p><a href="https://www.spe.org/en/twa/archives/twa/about-twa/">About</a></p>
+                        <p><a href="https://www.spe.org/en/twa/archives/twa/twa-editorial-board/">TWA Editorial Board</a></p>
                         <p><a href="https://www.spe.org/en/twa/contact/">Contact</a></p>
                         <p><a href="https://www.spe.org/en/twa/advertise/">Advertise</a></p>
                     </div>
