--- a/mainsite/templates/html5.html
+++ b/mainsite/templates/html5.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>{% block title %}This is my new project home page{% endblock title %} - {% render_block "title2" %}</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+
+	<link rel="shortcut icon" href="http://www.spe.org/assets/images/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="http://www.spe.org/assets/images/favicon.ico" type="image/x-icon">
+
     {# Add Third-party plugins and apps here. Like JQuery & bootstrap #}
     <!-- marketo scripts -->
     {% render_block "marketo_scripts" %}
